--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@ p{
 
 }
 footer{
-    text-align: right;
+    display:flex;
+    justify-content:space-between;
     margin:0 1.25rem 0.625rem 0;
     object-fit:scale-down;
     
